--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
 	<script src="highcharts.js"  type="text/javascript"></script>
 	<!-- <script src="application.js" type="text/javascript"></script> -->
 
-	<style type="text/css" src="application.css"></style>
+	<link rel='stylesheet' type="text/css" href="application.css"></style>
 
 	<title>Timelines-Quebec Chart</title>
 </head>
@@ -26,7 +26,7 @@
 	                text: 'Documentos enviados para o processo Federal de Imigração do Canada' 
 	            },
 	            subtitle: {
-	                text: 'Source: timelines-quebec.com'
+	                text: 'Fonte: timelines-quebec.com'
 	            },
 	            xAxis: {
 	                categories: <%= @window.times.map {|i| i.months.ago.strftime("%b/%y") }.reverse %>
