added medical exam request/month

--- a/views/index.erb
+++ b/views/index.erb
@@ -77,6 +77,10 @@
 	                name: 'Documentos enviados',
 	                data: <%= @processess_by_month %>
 
+	            }, 	{
+	                name: 'Exame médico recebido',
+	                data: <%= @exams_by_month %>
+
 	            }]
 	        });
 	    });
