exam request in view should be plural

--- a/views/index.erb
+++ b/views/index.erb
@@ -78,7 +78,7 @@
 	                data: <%= @processess_by_month %>
 
 	            }, 	{
-	                name: 'Exame médico recebido',
+	                name: 'Exames médicos recebidos',
 	                data: <%= @exams_by_month %>
 
 	            }]
